istio/templates/proxy-protocol-envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: proxy-protocol
  labels:
    app.kubernetes.io/name: istio-ingressgateway
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  configPatches:
  - applyTo: LISTENER_FILTER
    patch:
      operation: INSERT_FIRST
      value:
        name: envoy.filters.listener.proxy_protocol
        typed_config:
          "@type": "type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol"
  workloadSelector:
    labels:
      app: istio-ingressgateway
      istio: ingressgateway
