istio/templates/gateway-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: istio-ingressgateway
  labels:
    app.kubernetes.io/name: istio-ingressgateway
    app: istio-ingressgateway
    istio: ingressgateway
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 80
    - port: 443
  podSelector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
  policyTypes:
  - Egress
  - Ingress
